<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/black"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/su_username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:hint="@string/what_should_we_call_you"
        android:textColor="@color/white"
        android:layout_marginTop="110dp"
        android:ems="15"
        android:autofillHints="username"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/su_mail"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:hint="@string/your_mail_id"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:ems="15"
        android:autofillHints="username"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/su_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/choose_a_password"
        android:textColor="@color/white"
        android:ems="15"
        android:autofillHints="password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/su_signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#00FF0C"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:ems="7"
        android:text="@string/signup"

    />



</LinearLayout>