<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#232323"
        app:cardCornerRadius="7dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="8"
            android:padding="5dp"
            android:text="@string/ph"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:text="@string/ph"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/description"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="10dp"
            android:overScrollMode="always"
            android:padding="5dp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="#00FF00"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="TextViewEdits" />


        <ImageButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#232323"
            android:contentDescription="@string/edit"
            android:src="@drawable/baseline_delete_24" />

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="60dp"
            android:backgroundTint="#232323"
            android:contentDescription="@string/delete"
            android:src="@drawable/baseline_edit_24" />


    </androidx.cardview.widget.CardView>


</RelativeLayout>